docker_containers/node_auth/authservice-node/authNODE.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: acme-auth-node-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: acmeair
        tier: auth
        micro: node
    spec:
      containers:
      - name: auth-node
        image: IMAGE_NAME
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "700m"
---
apiVersion: v1
kind: Service
metadata:
  name: acme-auth-service
  labels:
    app: acmeair
    tier: auth
    micro: node
spec:
  ports:
  - protocol: TCP
    port: 80
    name: http
  selector:
    app: acmeair
    tier: auth
    micro: node
